# k4a_capture

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bgmatting.cpp  bgmatting.h  depthcolorizer.cpp  depthcolorizer.h  depthundistorthelper.cpp  depthundistorthelper.h  devmanager.cpp  devmanager.h  k4a_capture.pro  k4adevice.cpp  k4adevice.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
doc/calib/: 000226401212.yaml  000351501212.yaml  000614303512.yaml  000690603512.yaml
doc/my_calib/3072p/: 000226401212.yaml  000351501212.yaml  000614303512.yaml  000690603512.yaml
doc/my_calib/720p/: 000226401212.yaml  000351501212.yaml  000614303512.yaml  000690603512.yaml
utils/: calibration_chessboard.py  chessboard_calib.py  k4aviewer.py
utils/extract_from_mkv/: CMakeLists.txt  README.md  main.cpp
utils/pcl_viewer/: CMakeLists.txt  k4a_grabber.cpp  k4a_grabber.h  main.cpp
utils/print_calibration/: CMakeLists.txt
